[package]
name    = "stm32-lora-disco"
version = "0.1.0"
authors = ["Louis Thiery <louis@helium.com>"]
edition = "2018"

[dependencies]
cmwx1zzabz = { git = "https://git@github.com/lthiery/cmwx1zzabz-rs.git", branch = "master"}

[dependencies.stm32l0xx-hal]
git                    = "https://github.com/stm32-rs/stm32l0xx-hal.git"
features               = ["stm32l0x2", "rt", "stm32-usbd"]
branch                 = "master"
version                = "0.4.0"

[dev-dependencies]
cortex-m    = "0.6.1"
cortex-m-rt = "0.6.10"
nb          = "0.1.2"
panic-halt  = "0.2.0"
usb-device  = "0.2.3"
usbd-serial = "0.1.0"
longfi-device = { git = "https://github.com/helium/longfi-device-rs.git", branch = "master"}
cortex-m-rtfm = "0.5.0-beta.1"

[profile.dev]
opt-level = "s"

[profile.release]
incremental   = false
codegen-units = 1
lto           = true
opt-level     = "s"